@@ -75,11 +75,12 @@ case "$UNAME_S" in
 		>>$CONFIG_H
 	;;
 Linux)
-	echo '#define	_XOPEN_SOURCE	600' >>$CONFIG_H
-	echo '#define	_BSD_SOURCE'         >>$CONFIG_H
+	echo '#define	_XOPEN_SOURCE	600'   >>$CONFIG_H
+	echo '#define	_BSD_SOURCE'           >>$CONFIG_H
 	;;
 SunOS)
-	echo '#define	_XOPEN_SOURCE	600' >>$CONFIG_H
+	( echo '#define	CONFIG_SUNOS' ; echo ) >>$CONFIG_H
+	echo '#define	_XOPEN_SOURCE	600'   >>$CONFIG_H
 	;;
 *)
 	#
@@ -97,5 +98,5 @@ EOI
 	;;
 esac
 
-echo >>$CONFIG_H
+echo                             >>$CONFIG_H
 echo '#endif	/* !CONFIG_H */' >>$CONFIG_H
